--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -191,7 +191,7 @@
             background-attachment: fixed;
           }
           img.img0 {
-            left: -4vw;
+            left: 0;
             bottom: 0;
             // max-height: 90%;
           }
