--- a/src/scss/_inbox.scss
+++ b/src/scss/_inbox.scss
@@ -183,6 +183,20 @@ $window-height: 77vh;
         }
       }
     }
+    .no-selected-chat-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      &>img {
+        max-width: 100%;
+      }
+      &>h2 {
+        color: $category-base;
+        font-size: 2rem;
+      }
+    }
   }
 }
 
